-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.8.0
-
None
-
3
-
9223372036854775807
During 24 hours DNE test, one of MDS can not be mounted after restarts.
Lustre: 2635:0:(client.c:2018:ptlrpc_expire_one_request()) @@@ Request sent has timed out for slow reply: [sent 1437941992/real 1437941992] req@ffff881022b95980 x1507790665285844/t0(0) o256->MGC192.168.2.125@o2ib@192.168.2.125@o2ib:26/25 lens 304/240 e 0 to 1 dl 1437942748 ref 2 fl Rpc:X/0/ffffffff rc 0/-1 LustreError: 166-1: MGC192.168.2.125@o2ib: Connection to MGS (at 192.168.2.125@o2ib) was lost; in progress operations using this service will fail LustreError: 2635:0:(mgc_request.c:2072:mgc_process_config()) Cannot process recover llog -5 Lustre: MGC192.168.2.125@o2ib: Connection restored to MGS (at 192.168.2.125@o2ib) LustreError: 15c-8: MGC192.168.2.125@o2ib: The configuration from log 'lustre-MDT0002' failed (-5). This may be the result of communication errors between this node and the MGS, a bad configuration, or other errors. See the syslog for more information. LustreError: 2635:0:(obd_mount_server.c:1306:server_start_targets()) failed to start server lustre-MDT0002: -5 LustreError: 2635:0:(obd_mount_server.c:1790:server_fill_super()) Unable to start targets: -5 Lustre: Failing over lustre-MDT0002 Lustre: server umount lustre-MDT0002 complete LustreError: 2635:0:(obd_mount.c:1342:lustre_fill_super()) Unable to mount (-5) Lustre: DEBUG MARKER: recovery-mds-scale test_failover_mds: @@@@@@ FAIL: Restart of mds3 failed! Lustre: DEBUG MARKER: Duration: 86400