lustre/mgc/mgc_request.c
@@ -1974,8 +1974,16 @@ restart:
 
         if (cld_is_recover(cld)) {
                 rc = 0; /* this is not a fatal error for recover log */
-                if (rcl == 0)
+                if (rcl == 0) {
                         rc = mgc_process_recover_log(mgc, cld);
+			if (rc != 0) {
+				CERROR("%s: recover log %s failed: rc = %d"
+				       "not fatal.\n", mgc->obd_name,
+				       cld->cld_logname, rc);
+				rc = 0;
+				cld->cld_lostlock = 1;
+			}
+		}
         } else {
                 rc = mgc_process_cfg_log(mgc, cld, rcl != 0);
         }
